--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "portfolio-htmx-axum"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
@@ -13,6 +11,6 @@ axum-htmx = "0.5.0"
 octocrab = { version = "0.32.0", features = ["follow-redirect", "retry", "rustls", "timeout", "tracing"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+surrealdb = { version = "1.0.2", features = ["kv-speedb"] }
 tokio = { version = "1.35.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["full"] }
-tracing-subscriber = "0.3.18"
